Fixed font-sizes for responsive nav-items on mobile, clean up constants

--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -35,7 +35,14 @@ a {
   color: rgba(0, 0, 0, 1);
   opacity: 1;
   font-weight: 700;
-  font-size: 1.2rem;
+  /* font-size: 1.2rem; */
   padding-bottom: 6px;
   border-bottom: 2px solid rgba(51, 51, 51, 0.8);
+  font-size: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .is-active {
+    font-size: 1.2rem;
+  }
 }
